--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="action_settings">Settings</string>
     <string name="scanned_data">Scanned Data</string>
     <string name="audio_recorder">Audio Recorder</string>
-    <string name="start_recording">Start Recording</string>
-    <string name="stop_recording">Stop Recording</string>
+    <string name="start_recording">Start</string>
+    <string name="stop_recording">Stop</string>
+    <string name="show_score">Show Score</string>
     <string name="play_recording">Play Recording</string>
     <string name="stop_playing">Stop Playing</string>
     <string name="status">Status</string>
+    <string name="score">Score</string>
+    <string name="write">Write Your Text Here</string>
 </resources>
